MSN-test.md/MSN Backup10032015/src/objects/STP_Day_Wise_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_number_c__c</fullName>
        <label>Day_number__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STArea__c</fullName>
        <label>STArea</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>STP Day Wise Plans</relationshipLabel>
        <relationshipName>STP_Day_Wise_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Tour_Plan_day__c</fullName>
        <label>Standard Tour Plan day</label>
        <referenceTo>Standard_Tour_Plan__c</referenceTo>
        <relationshipLabel>STP Day Wise Plans</relationshipLabel>
        <relationshipName>STP_Day_Wise_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>STP Day Wise Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>STP Day Wise Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>STP Day Wise Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>